# twitch-vizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: main.py  pyproject.toml
backend/emotes/: emotes.db
backend/tests/: test_handler.py
backend/vizer/: __init__.py  bot.py  config.py  handler.py  log.py  runtime.py  server.py
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/scenes/biome/: biome.ts  entities.ts  floor.ts  index.html  systems.ts  types.ts
frontend/src/scenes/chat/: chat.ts  index.html
frontend/src/scenes/emoji-chat/: emoji-chat.ts  index.html
frontend/src/scenes/fluid-chat/: fluid-chat.ts  index.html
frontend/src/scenes/glitch-overlay/: glitch-overlay.ts  index.html
frontend/src/scenes/grunge/: grunge.ts  index.html
frontend/src/scenes/hacker-chat/: hacker-chat.ts  index.html
frontend/src/scenes/mr-robot/: index.html  mr-robot.ts
frontend/src/scenes/pixel-chat/: index.html  pixel-chat.ts
frontend/src/scenes/silicon-valley/: index.html  silicon-valley.ts
frontend/src/shared/: overlay.ts
memory/: MEMORY.md  project_biome_design.md
