[project]
name = "twitch-vizer"
version = "0.1.0"
description = "Twitch chat bot that pushes visual events to OBS browser sources via WebSocket"
requires-python = ">=3.12"
dependencies = [
    "twitchio>=3.2.2",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.47.0",
    "python-dotenv>=1.1.1",
    "colorlog>=6.10.1",
]

[project.scripts]
twitch-vizer = "vizer:main"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include           = ["vizer", "main.py"]
pythonVersion     = "3.12"
typeCheckingMode  = "standard"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.15",
]
